// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizard Component should not display a wizard 1`] = `null`;

exports[`connected 1`] = `
<Wizard
  className=""
  dialogClassName=""
  onClose={[Function]}
  onExited={[Function]}
  show={true}
>
  <WizardHeader
    onClose={[Function]}
    title="Add Source"
  />
  <WizardBody
    className=""
  >
    <WizardSteps
      className=""
      steps={
        Array [
          <WizardStep
            activeStep={1}
            className=""
            label="1"
            onClick={[Function]}
            step={1}
            stepIndex={0}
            title="Type"
          />,
          <WizardStep
            activeStep={1}
            className=""
            label="2"
            onClick={[Function]}
            step={2}
            stepIndex={1}
            title="Credentials"
          />,
          <WizardStep
            activeStep={1}
            className=""
            label="3"
            onClick={[Function]}
            step={3}
            stepIndex={2}
            title="Results"
          />,
        ]
      }
    />
    <WizardRow
      className=""
    >
      <WizardMain
        className=""
      >
        <WizardContents
          activeStepIndex={0}
          activeSubStepIndex={null}
          className=""
          key="Type"
          stepIndex={0}
          subStepIndex={null}
        >
          <Connect(AddSourceWizardStepOne) />
        </WizardContents>
        <WizardContents
          activeStepIndex={0}
          activeSubStepIndex={null}
          className=""
          key="Credentials"
          stepIndex={1}
          subStepIndex={null}
        >
          <Connect(AddSourceWizardStepTwo) />
        </WizardContents>
        <WizardContents
          activeStepIndex={0}
          activeSubStepIndex={null}
          className=""
          key="Results"
          stepIndex={2}
          subStepIndex={null}
        >
          <Connect(AddSourceWizardStepThree) />
        </WizardContents>
      </WizardMain>
    </WizardRow>
  </WizardBody>
  <WizardFooter
    className=""
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="btn-cancel"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={true}
      onClick={[Function]}
    >
      <Icon
        name="angle-left"
        type="fa"
      />
      Back
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={true}
      onClick={[Function]}
    >
      Next
      <Icon
        name="angle-right"
        type="fa"
      />
    </Button>
  </WizardFooter>
</Wizard>
`;

exports[`connected update 1`] = `
<Wizard
  className=""
  dialogClassName=""
  onClose={[Function]}
  onExited={[Function]}
  show={true}
>
  <WizardHeader
    onClose={[Function]}
    title="Edit Source"
  />
  <WizardBody
    className=""
  >
    <WizardSteps
      className=""
      steps={
        Array [
          <WizardStep
            activeStep={2}
            className=""
            label="1"
            onClick={[Function]}
            step={2}
            stepIndex={0}
            title="Credentials"
          />,
          <WizardStep
            activeStep={2}
            className=""
            label="2"
            onClick={[Function]}
            step={3}
            stepIndex={1}
            title="Results"
          />,
        ]
      }
    />
    <WizardRow
      className=""
    >
      <WizardMain
        className=""
      >
        <WizardContents
          activeStepIndex={0}
          activeSubStepIndex={null}
          className=""
          key="Credentials"
          stepIndex={0}
          subStepIndex={null}
        >
          <Connect(AddSourceWizardStepTwo) />
        </WizardContents>
        <WizardContents
          activeStepIndex={0}
          activeSubStepIndex={null}
          className=""
          key="Results"
          stepIndex={1}
          subStepIndex={null}
        >
          <Connect(AddSourceWizardStepThree) />
        </WizardContents>
      </WizardMain>
    </WizardRow>
  </WizardBody>
  <WizardFooter
    className=""
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="btn-cancel"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={true}
      onClick={[Function]}
    >
      <Icon
        name="angle-left"
        type="fa"
      />
      Back
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={true}
      onClick={[Function]}
    >
      Save
      <Icon
        name="angle-right"
        type="fa"
      />
    </Button>
  </WizardFooter>
</Wizard>
`;
